<resources>
    <string name="app_name">SrabCharge</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo22">TODO</string>
    <string name="todo3">TODO</string>
    <string name="ch">TODO</string>
    <string name="todox">TODO</string>
    <string name="todoz">TODO</string>
    <string name="todoa">TODO</string>
    <string name="todos">TODO</string>
    <string name="todoe">TODO</string>
    <string name="todoc">TODO</string>
    <string name="todog">TODO</string>
    <string name="todof">TODO</string>
    <string name="todow">TODO</string>
    <string name="todoq">TODO</string>
    <string name="tkodoc">TODO</string>
    <string name="todosa">TODO</string>
    <string name="todowk">TODO</string>


</resources>
