<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Vodafone">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="149dp"
        android:background="@drawable/buttoncode"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/todof"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:srcCompat="@drawable/writecode" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="53dp"
        android:layout_height="0dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="264dp"
        android:layout_marginBottom="129dp"
        android:contentDescription="@string/todoq"
        app:layout_constraintBottom_toTopOf="@+id/imageView14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/camera" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="70dp"
        android:layout_height="62dp"
        android:contentDescription="@string/todow"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/checked" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="51dp"
        android:layout_height="53dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/todoc"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/microphone" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="274dp"
        android:contentDescription="@string/todosa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:layout_constraintVertical_bias="0.847"
        app:srcCompat="@drawable/morething" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="218dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:srcCompat="@drawable/prseeheretochoisesporrut"
        android:contentDescription="@string/todow" />
</androidx.constraintlayout.widget.ConstraintLayout>